[package]
name = "term-menu"
version = "0.1.0"
authors = ["Diego-Henriquez <diego@paragonpawns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-builder = "0.1.0"
termios = "0.3.3"

[[example]]
name = "list"
path = "examples/list.rs"
