[package]
name = "term-inquiry"
version = "0.1.1"
authors = ["Diego-Henriquez <diego@paragonpawns.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ParagonPawns/term-inquiry"
description = "Quick and easy way to make terminal inquiries using builder pattern."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.10.0"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"

[dependencies]
ansi-builder = "0.1.6"

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "checkbox-list"
path = "examples/checkbox_list.rs"
